--- a/styles.css
+++ b/styles.css
@@ -64,7 +64,7 @@ button:hover {
   top: 50%; /* Center vertically */
   left: 50%; /* Center horizontally */
   transform: translate(-50%, -50%); /* Center alignment */
-  background-color: #CFF5EF;
+  background-color: #FFF;
   padding: 20px;
   border-radius: 8px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
